tests/files/type_checker_tests/should_pass/073.cmdr
//Test that pre-increment operations type check
a = 1.1;
x = ++a;
