tests/files/type_checker_tests/should_fail/099.cmdr
//Should fail pre-increment on something not a lvalue
++1;
